mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_empty_map_index.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Cannot index non-list type
--> test_scripts/error_cases/semantic_empty_map_index.mux:3:1
   |
 3 | m["key"]
   | ^
   |
= help: Only lists and maps can be indexed with '[]'. Examples: my_list[0], my_map['key']
